# BUIPT-Course-Work

./: .gitignore  README.md  README.zh-CN.md
C#/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Covid-19-new.sln  Covid-19.sln
C#/Assets/Materials/: New Material 1.mat  New Material.mat
C#/Assets/Prefabs/: Row.prefab
C#/Assets/Scenes/: RoomScene.unity  UIScene.unity
C#/Assets/Scripts/: Camera.cs  Chair.cs  Controller.cs  Cough.cs  FloatNumberSlider.cs  HealthCountDisplay.cs  HellNode.cs  InfectionRateSlider.cs  LeftVirus.cs  MainMenu.cs  Move.cs  MovePlan.cs  PauseButton.cs  PercentageOfInfectedSlider.cs  RecordCanvas.cs  RecordContent.cs  SaveButton.cs  SpeedSlider.cs  Spread.cs  StartNode.cs  StudentNumSlider.cs  TimeDisplay.cs  WearMasksToggle.cs  WholeNumberSlider.cs  WinNode.cs
C#/Logs/: ApiUpdaterCheck.txt
C#/ProjectSettings/: ProjectSettings.asset
C#/UserSettings/: EditorUserSettings.asset
Compiler Techniques/C Lexer/: compile_lex.sh  lex.l  test.c
Computer Networks/1. Distance-Vector Simulation/Code/: CMakeLists.txt  dv_algorithm.cpp  dv_algorithm.h  dv_msg.cpp  dv_msg.h  main.cpp  networkrouting.cpp  networkrouting.h  transport.cpp  transport.h
Computer Networks/2. Reliable UDP Transmission/Code/: main.cpp  readme.txt  rudp  rudp_msg.cpp  rudp_msg.h  transport.cpp  transport.h  user_cmd.cpp
JavaScript/fifteen_puzzle_astar/: index.html
JavaScript/fifteen_puzzle_idastar/: index.html
Parallel Computing/: CMakeLists.txt  animate.py  n_body.cpp  run.sh  vector2d.cpp  vector2d.h
Shell/Finder/: finder.sh
(+17 files in other folders)
